--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "Assignments/HW2_DigitalInstruments/HW2_DigitalInstruments"]
 	path = Assignments/HW2_DigitalInstruments/HW2_DigitalInstruments
 	url = https://github.com/Ursinus-CS472A-S2021/HW2_DigitalInstruments.git
+[submodule "Assignments/HW3_Vocoders/HW3_Vocoders"]
+	path = Assignments/HW3_Vocoders/HW3_Vocoders
+	url = https://github.com/Ursinus-CS472A-S2021/HW3_Vocoders.git
