--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "ClassExercises/Week9/Week9_Shazam/pyshazam"]
 	path = ClassExercises/Week9/Week9_Shazam/pyshazam
 	url = https://github.com/ursinus-cs372-s2023/pyshazam.git
+[submodule "ClassExercises/Week10/Week10_HPSS/Week10_HPSS"]
+	path = ClassExercises/Week10/Week10_HPSS/Week10_HPSS
+	url = https://github.com/ursinus-cs372-s2023/Week10_HPSS.git
