--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "ClassExercises/Week10/Week10_HPSS/Week10_HPSS"]
 	path = ClassExercises/Week10/Week10_HPSS/Week10_HPSS
 	url = https://github.com/ursinus-cs372-s2023/Week10_HPSS.git
+[submodule "ClassExercises/Week10/Week10_NMF/Week10_NMF"]
+	path = ClassExercises/Week10/Week10_NMF/Week10_NMF
+	url = https://github.com/ursinus-cs372-s2023/Week10_NMF.git
