--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "ClassExercises/Week11/Week11_DTW/Week11_DTW"]
 	path = ClassExercises/Week11/Week11_DTW/Week11_DTW
 	url = https://github.com/ursinus-cs372-s2023/Week11_DTW.git
+[submodule "ClassExercises/Week12/Week12_LogisticSquareSawtooth/Week12_LogisticSquareSawtooth"]
+	path = ClassExercises/Week12/Week12_LogisticSquareSawtooth/Week12_LogisticSquareSawtooth
+	url = https://github.com/ursinus-cs372-s2023/Week12_LogisticSquareSawtooth.git
