--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "ClassExercises/Week11/Week11_Autotuner"]
 	path = ClassExercises/Week11/Week11_Autotuner
 	url = https://github.com/digitalmusicprocessing/Week11_Autotuner.git
+[submodule "ClassExercises/Week12/Week12_GradientDescent"]
+	path = ClassExercises/Week12/Week12_GradientDescent
+	url = https://github.com/digitalmusicprocessing/Week12_GradientDescent.git
